force-app/main/default/objects/ref_by__c/ref_by__c.object-meta.xml
<CustomObject>
    <label>ref by</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ref bys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>