force-app/main/default/objects/ref_by__c/fields/degree__c.field-meta.xml
<CustomField>
    <fullName>degree__c</fullName>
    <label>degree</label>
    <type>TextArea</type>
</CustomField>