force-app/main/default/objects/ref_by__c/fields/landlineNo__c.field-meta.xml
<CustomField>
    <fullName>landlineNo__c</fullName>
    <label>landlineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>