force-app/main/default/objects/ref_by__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <label>lastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>