force-app/main/default/objects/ref_by__c/fields/middleName__c.field-meta.xml
<CustomField>
    <fullName>middleName__c</fullName>
    <label>middleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>