force-app/main/default/objects/ref_by__c/fields/mobileNo__c.field-meta.xml
<CustomField>
    <fullName>mobileNo__c</fullName>
    <label>mobileNo</label>
    <type>Phone</type>
</CustomField>