force-app/main/default/objects/ref_by__c/fields/refBy__c.field-meta.xml
<CustomField>
    <fullName>refBy__c</fullName>
    <label>refBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>